# StratagemForge

./: .editorconfig  .gitignore  ANALYSIS_READY.md  CODE_INSTRUCTIONS.md  CS2_ECONOMY_COMPLETE.md  DEBUG_GUIDE.md  DEMO_DOWNLOAD_GUIDE.md  ECO.md  Earthfile  Makefile  OPTIMIZATION_COMPLETE.md  PIPELINE_EXECUTION_GUIDE.md  PIPELINE_GUIDE.md  README.md  STRATEGIC_QUESTIONS.md  TROUBLESHOOTING.md  Taskfile.yml  UPLOADS_REFACTOR.md  app.py  benchmark_performance.py  build_rust_extension.py  codex.yaml  compare_parsers.py  compose.yml  csv_processor.py  diagnose_views.py  duckdb_connector.py  duckdb_connector_optimized.py  enhanced_sql_agent.py  example_analysis.py  expert_validation.py  expert_validation_optimized.py  inspect_db.py  install_go.ps1  interactive_analysis.py  llmtest.py  optimization_summary.py  package.json  parse_demo.py  pipeline.py  (+11 more)
.github/: coding.instructions.md  copilot-instructions.md
.ipynb_checkpoints/: parse_demo-checkpoint.py
Requirements/: ARCHITECTURE.md  GITIGNORE_GUIDE.md  HIGH_LEVEL_FEATURES.md  TECH_STACK.md  TEST_AUTOMATION.md
cs2econ/: __init__.py  cli.py  io_parquet.py  reducer.py  rules.py  schemas.py
data/: .gitkeep
data/zones/: inferno.json
database/: __init__.py  schema.py
demos/: .gitkeep
go_parser/: go.mod  go.sum  main.go  simple_parser.go  simple_test.go
pages/: ai_analyst.py  analysis.py  home.py  matches.py
reports/: brief_report_20250904_224858.md
rust_processor/: Cargo.toml
rust_processor/src/: lib.rs
scripts/: build_spatial_zones.py  demo_download_example.py  generate_report.py  hltv_demo_downloader.py  requirements-demo-download.txt  simple_hltv_downloader.py  tag_zones.py  zones.py
services/analysis-service/: Dockerfile  README.md  main.py  requirements.txt
services/bff/: .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/bff/src/: index.ts
services/ingestion-service/: Dockerfile  README.md  go.mod  go.sum  main.go
services/user-service/: Dockerfile  README.md  go.mod  go.sum  main.go
src/stratagemforge/: main.py
src/stratagemforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stratagemforge/api/: deps.py
src/stratagemforge/api/routes/: analysis.py  demos.py  health.py  users.py
src/stratagemforge/core/: app.py  config.py  database.py
src/stratagemforge/domain/analysis/: schemas.py  service.py
src/stratagemforge/domain/demos/: models.py  processor.py  repository.py  schemas.py  service.py
src/stratagemforge/domain/users/: models.py  schemas.py  service.py
tests/: test_cs2econ.py
tests/integration/: test_api.py
tests/unit/: test_demo_processor.py  test_demo_service.py
utils/: demo_utils.py
web-app/: .eslintrc.js  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
web-app/src/app/: layout.tsx  page.tsx
web-app/src/app/api/config/: route.ts
web-app/src/app/api/demos/upload/: route.ts
web-app/src/app/api/health/: route.ts
web-app/src/app/api/system-status/: route.ts
web-app/src/app/api/test/: route.ts
web-app/src/app/upload/: page.tsx
web-app/src/styles/: globals.css
