[project]
name = "cs2econ"
version = "0.1.0"
description = "CS2 Economy Analysis Pipeline for StratagemForge"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "StratagemForge", email = "team@stratagemforge.com"},
]
dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.9.0",
    "rich>=13.0.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cs2econ = "cs2econ.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "T20",  # flake8-print
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["T20"]  # Allow print in tests

[tool.black]
target-version = ['py312']
line-length = 120
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cs2econ",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["cs2econ"]
omit = [
    "*/tests/*",
    "*/test_*",
]
