[package]
name = "demo_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "demo_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
duckdb = "1.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"

[build-dependencies]
pyo3-build-config = "0.22"
